--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -1,7 +1,81 @@
 <html>
 <head>
 <title>My Lovely One-Page App</title>
+
+</head>
+<body>
+
+<form >
+  Event name: <input type="text" id="nameInput">
+  date: <input type="text" id="dateInput">
+</form>
+<button id = 'createbtn'>create</button>
+
+<button onclick="testAlert();">警告</button>
+<div id="events"></div>
+</body>
+
 <script>
+
+
+function reqJSON(method, url, data) {
+  return new Promise((resolve, reject) => {
+    let xhr = new XMLHttpRequest();
+    xhr.open(method, url);
+	xhr.setRequestHeader('Content-type','qpplication/json')
+    xhr.responseType = 'json';
+    xhr.onload = () => {
+      if (xhr.status >= 200 && xhr.status < 300) {
+        resolve({status: xhr.status, statusText:xhr.statusText, data: xhr.response});
+      } else {
+	    console.error('xhr err',xhr);
+        reject({status: xhr.status, statusText:xhr.statusText, data: xhr.response});
+      }
+    };
+    xhr.onerror = () => {
+	  console.error('xhr err',xhr);
+      reject({status: xhr.status,statusText:xhr.statusText, data: xhr.response});
+    };
+    xhr.send(JSON.stringify(data));
+  });
+}
+async function getEvent(){
+   let {data} = await resJson('GET','/events');
+   const event_div = document.getElementById('events');
+   event_div.innerHTML = '';
+   let intext = ''
+   for (let e of data.events ||[]){
+      intext += `<div class='event' key="${e.id}">
+	            <a class ='ename'>name:${e.name}</a>
+				<a class ='edate'>date:${e.date}</a>
+				<button onclick = 'delEvent(this.parentNode.getAttribute('key'))'>delete</button>
+				<\div>\n`;
+      
+   }
+   event_div.innerHTML = intext;
+}
+
+
+async function delEvent(key){
+   await resJson('DELETE','/event/${key}');
+   await getEvent();
+}
+
+async function createEvent(){
+   await resJson('POST','/event',{
+      name:document.getElementById('nameInput').value,
+	  date:document.getElementById('dateInput').value,
+   });
+   await getEvent();
+}
+
+
+document.addEventListener('DOMContentLoaded', () => {
+   document.getElementById('createbtn').addEventListener('click',createEvent);
+   getEvent();
+
+});
+
 function parseDate(datestr) {
   const [y, m, d] = datestr.split('-');
   return new Date(Number.parseInt(y), Number.parseInt(m)-1, Number.parseInt(d));
@@ -15,62 +89,5 @@ function createEvent(){
    //var data = parseDate(datestr) ;
    testAlert();
 }
-
-function reqJSON(method, url, data) {
-  return new Promise((resolve, reject) => {
-    let xhr = new XMLHttpRequest();
-    xhr.open(method, url);
-    xhr.responseType = 'json';
-    xhr.onload = () => {
-      if (xhr.status >= 200 && xhr.status < 300) {
-        resolve({status: xhr.status, data: xhr.response});
-      } else {
-        reject({status: xhr.status, data: xhr.response});
-      }
-    };
-    xhr.onerror = () => {
-      reject({status: xhr.status, data: xhr.response});
-    };
-    xhr.send(data);
-  });
-}
-
-document.addEventListener('DOMContentLoaded', () => {
-  reqJSON('GET', '/events')
-  .then(({status, data}) => {
-    // Use the *data* argument to change what we see on the page.
-    // It will look something like this:
-    // {
-    //   "events": [
-    //     {"name": "Grandma's Birthday", "date": "08-05"},
-	   //     {"name": "Independence Day", "date": "07-04"}
-    //   ]
-    // }
-
-    // There are better ways, but this is illustrative of the concept:
-    let html = '';
-    for (let event of data.events) {
-      html += `${event.name}: ${event.date}<br>`;
-    }
-    document.getElementById('events').innerHTML = html;
-  })
-  .catch(({status, data}) => {
-    // Display an error.
-    document.getElementById('events').innerHTML = 'ERROR: ' +
-      JSON.stringify(data);
-  });
-});
 </script>
-</head>
-<body>
-
-<form onsubmit="return Flase">
-  Event name: <input type="text" id="nameInput">
-  date: <input type="text" id="dateInput">
-  <button onclick="createEvent();" id = 'btn'>create</button>
-</form>
-
-<button onclick="testAlert();">警告</button>
-<div id="events"></div>
-</body>
 </html>
