--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>My Lovely One-Page App</title>
+<title>My App</title>
 
 </head>
 <body>
@@ -11,7 +11,6 @@
 </form>
 <button id = 'createbtn'>create</button>
 
-<button onclick="testAlert();">警告</button>
 <div id="events"></div>
 </body>
 
@@ -80,14 +79,7 @@ function parseDate(datestr) {
   const [y, m, d] = datestr.split('-');
   return new Date(Number.parseInt(y), Number.parseInt(m)-1, Number.parseInt(d));
 }
-function testAlert() {
-            alert('警告框！！！ ');
-        }
-function createEvent(){
-   //const nameStr = document.getElementById('nameInput').value;
-   //const dateStr = document.getElementById('dateInput').value;
-   //var data = parseDate(datestr) ;
-   testAlert();
-}
+
+
 </script>
 </html>
