--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -1,86 +1,18 @@
 <!doctype html>
 <html>
 <head>
-<title>My App</title>
-
+  <title>Datastore and Firebase Auth Example</title>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
-<form >
-  Event name: <input type="text" id="nameInput">
-  date: <input type="text" id="dateInput">
-</form>
-<button id = 'createbtn'>create</button>
-
-<div id="events"></div>
+  <h1>Datastore and Firebase Auth Example</h1>
+  <!-- [START gae_python38_datastore_print_times] -->
+  <h2>Last 10 visits</h2>
+  {% for time in times %}
+    <p>{{ time['timestamp'] }}</p>
+  {% endfor %}
+  <!-- [END gae_python38_datastore_print_times] -->
 </body>
-
-<script>
-
-
-function reqJSON(method, url, data) {
-  return new Promise((resolve, reject) => {
-    let xhr = new XMLHttpRequest();
-    xhr.open(method, url);
-	xhr.setRequestHeader('Content-type','application/json')
-    xhr.responseType = 'json';
-    xhr.onload = () => {
-      if (xhr.status >= 200 && xhr.status < 300) {
-        resolve({status: xhr.status, statusText:xhr.statusText, data: xhr.response});
-      } else {
-	    console.error('xhr err',xhr);
-        reject({status: xhr.status, statusText:xhr.statusText, data: xhr.response});
-      }
-    };
-    xhr.onerror = () => {
-	  console.error('xhr err',xhr);
-      reject({status: xhr.status,statusText:xhr.statusText, data: xhr.response});
-    };
-    xhr.send(JSON.stringify(data));
-  });
-}
-async function getEvent(){
-   let {data} = await resJson('GET','/events');
-   const event_div = document.getElementById('events');
-   event_div.innerHTML = '';
-   let intext = ''
-   for (let e of data.events ||[]){
-      intext += `<div class='event' key="${e.id}">
-	            <a class ='ename'>name:${e.name}</a>
-				<a class ='edate'>date:${e.date}</a>
-				<button onclick = 'delEvent(this.parentNode.getAttribute('key'))'>delete</button>
-				<\div>\n`;
-      
-   }
-   event_div.innerHTML = intext;
-}
-
-
-async function delEvent(key){
-   await resJson('DELETE','/event/${key}');
-   await getEvent();
-}
-
-async function createEvent(){
-   await resJson('POST','/event',{
-      name:document.getElementById('nameInput').value,
-	  date:document.getElementById('dateInput').value,
-   });
-   await getEvent();
-}
-
-
-document.addEventListener('DOMContentLoaded', () => {
-   document.getElementById('createbtn').addEventListener('click',createEvent);
-   getEvent();
-
-});
-
-function parseDate(datestr) {
-  const [y, m, d] = datestr.split('-');
-  return new Date(Number.parseInt(y), Number.parseInt(m)-1, Number.parseInt(d));
-}
-
-
-</script>
 </html>
