--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -28,12 +28,12 @@ function reqJSON(method, url, data) {
       if (xhr.status >= 200 && xhr.status < 300) {
         resolve({status: xhr.status, statusText:xhr.statusText, data: xhr.response});
       } else {
-	    console.error('xhr err',xhr);
+	    console.error('xhr with error:',xhr);
         reject({status: xhr.status, statusText:xhr.statusText, data: xhr.response});
       }
     };
     xhr.onerror = () => {
-	  console.error('xhr err',xhr);
+	  console.error('xhr with error:',xhr);
       reject({status: xhr.status,statusText:xhr.statusText, data: xhr.response});
     };
     xhr.send(JSON.stringify(data));
@@ -45,11 +45,11 @@ async function getEvent(){
    event_div.innerHTML = '';
    let intext = ''
    for (let e of data.events ||[]){
-      intext += `<div class='event' key="${e.id}">
-	            <a class ='ename'>name:${e.name}</a>
-				<a class ='edate'>date:${e.date}</a>
-				<button onclick = 'delEvent(this.parentNode.getAttribute('key'))'>delete</button>
-				<\div>\n`;
+      intext += "<div class='event' key="+${e.id}+">" +
+	            "<a class ='ename'>name:"+${e.name}+"</a>"+
+				"<a class ='edate'>date:"+${e.date}+"</a>"+
+				"<button onclick = 'delEvent(this.parentNode.getAttribute('key'))'>delete</button>"+
+				"<\div>\n";
       
    }
    event_div.innerHTML = intext;
