--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -45,9 +45,9 @@ async function getEvent(){
    event_div.innerHTML = '';
    let intext = ''
    for (let e of data.events ||[]){
-      intext += "<div class='event' key="+${e.id}+">" +
-	            "<a class ='ename'>name:"+${e.name}+"</a>"+
-				"<a class ='edate'>date:"+${e.date}+"</a>"+
+      intext += "<div class='event' key="+ e.id +">" +
+	            "<a class ='ename'>name:"+ e.name +"</a>"+
+				"<a class ='edate'>date:"+ e.date +"</a>"+
 				"<button onclick = 'delEvent(this.parentNode.getAttribute('key'))'>delete</button>"+
 				"<\div>\n";
       
