--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -45,7 +45,7 @@ async function getEvent(){
    const event_div = document.getElementById('events');
    event_div.innerHTML = '';
    let intext = ''
-   for (let e of data['events'] ||[]){
+   for (let e of data.events ||[]){
       intext += "<div class='event' key="+ e['id'] +">" +
 	            "<a class ='ename'>name:"+ e['name'] +"</a>"+
 				"<a class ='edate'>date:"+ e['date'] +"</a>"+
@@ -53,6 +53,7 @@ async function getEvent(){
 				"<\div>\n";
       
    }
+   let d = data['events']
    event_div.innerHTML = intext;
 }
 
