--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -2,7 +2,12 @@
 <html>
 <head>
 <title>My App</title>
-
+<style>
+.delbtn{
+    color: blueviolet;
+    text-align: center;
+}
+</style>
 </head>
 <body>
 
@@ -49,7 +54,7 @@ async function getEvent(){
       intext += "<div class='event' key="+ e['id'] +">" +
 	            "<a class ='ename'>name:"+ e['name'] +"</a>"+
 				"<a class ='edate'>date:"+ e['date'] +"</a>"+
-				"<button onclick = \'delEvent(this.parentNode.getAttribute(\'key\'))\'>delete</button>"+
+				"<button class= 'delbtn'  onclick = \'delEvent(this.parentNode.getAttribute(\'key\'))\'>delete</button>"+
 				"<\div>\n";
       
    }
