--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -64,7 +64,7 @@ async function getEvent(){
 
 
 async function delEvent(key){
-   await reqJSON('DELETE','/event/${key}');
+   await reqJSON('DELETE','/event',{id:key});
    await getEvent();
 }
 
