--- a/lab1/static/index.html
+++ b/lab1/static/index.html
@@ -51,15 +51,21 @@ async function getEvent(){
    event_div.innerHTML = '';
    let intext = ''
    for (let e of JSON.parse(data).events ||[]){
+      if (isPast(e['date'])){
+	     console.log('Date' + e['date'] + 'is in past. skipping');
+		 continue;
+	  }
       intext += "<div class='event' key="+ e['id'] +">" +
-	            "<a class ='ename'>name:"+ e['name'] +"    </a>"+
-				"<a class ='edate'>date:"+ e['date'] +"    </a>"+
+	            "<a class ='ename'>name:"+ e['name'] +"\t</a>"+
+				"<a class ='edate'>date:"+ e['date'] +"\t</a>"+
+				"<a class ='timer' date = "+ e['date'] +" ></a>"+
 				"<button class= 'delbtn'  onclick = \'delEvent("+ e['id'] +")\'>delete</button>"+
 				"<\div>\n";
       
    }
    //let d = JSON.parse(data).events
    event_div.innerHTML = intext;
+   renderTimers();
 }
 
 
@@ -80,8 +86,60 @@ async function createEvent(){
 document.addEventListener('DOMContentLoaded', () => {
    document.getElementById('createbtn').addEventListener('click',createEvent);
    getEvent();
-
+   setInterval(renderTimers,1000);
 });
+
+function renderTime(el,now){
+   now = now || new Date();
+   const date = parseDate(el.getAttribute('date'));
+   const countdown = countdownStringTo(date);
+   if (countdown == null){
+      return false;
+   }
+   el.innerText = countdown;
+   return true;
+}
+
+function renderTimers(){
+   const a_s = document.querySelectorAll('a.timer');
+   const now = new Date();
+   for (let el of a_s){
+      if (isPast(el.getAttribute('date'))){
+	     el.parentNode.style.display = 'none';
+		 continue;
+	  }
+	  renderTime(el,now);
+   
+   }
+
+}
+
+function countdownStringTo(date){
+  let secs = Math.floor((date - new Date())/1000);
+  if (secs <0){
+     return null;
+  }
+  let mins = Math.floor(secs/60);
+  secs %=60;
+  
+  let hours = Math.floor(mins/60);
+  mins %=60;
+
+  let days = Math.floor(hours/60);
+  hours %=24;
+  
+  let units = [days,hours,mins,secs];
+  while (units.length>0 && units[0]===0){
+     units.shift();
+  }
+  return units.map(u => (u < 10? '0':'') + u).join(':');
+}
+
+function isPast(date_str){
+   const date = (typeof date_str ==='string') ? parseDate(date_str):date_str;
+   return date - new Date() < 0;
+
+}
 
 function parseDate(datestr) {
   const [y, m, d] = datestr.split('-');
