--- a/lab2/static/index.html
+++ b/lab2/static/index.html
@@ -89,7 +89,7 @@ async function createEvent(){
 document.addEventListener('DOMContentLoaded', () => {
    document.getElementById('logoutbtn').addEventListener('click',logout);
    document.getElementById('createbtn').addEventListener('click',createEvent);
-   getsession();
+   //getsession();
    getEvent();
    
    setInterval(renderTimers,1000);
