--- a/lab2/static/login.html
+++ b/lab2/static/login.html
@@ -68,7 +68,7 @@ async function login(){
       user:document.getElementById('userInput').value,
 	  pwd:document.getElementById('pwdInput').value,
    });
-   await getlo();
+   //await getlo();
 }
 
 async function register(){
