--- a/lab3/login.html
+++ b/lab3/login.html
@@ -1,72 +1,21 @@
-<!doctype html>
-<html>
-<head>
-<title>login</title>
-<
-</head>
-<body>
+{% extends "index.html" %}
 
-<form >
-  username: <input type="text" id="userInput">
-  <br>
-  password: <input type="text" id="pwdInput">
-</form>
-<button id = 'loginbtn'>login</button>
-<button id = 'registerbtn'>register</button>
-
-<div id="pass"></div>
-</body>
-
-<script>
-
-
-async function getlo(){
-   let {data} = await reqJSON('GET','/login');
-   const event_div = document.getElementById('pass');
-   event_div.innerHTML = '';
-   let intext = ''
-   for (let p of JSON.parse(data).pwds ||[]){
-     
-      intext += "<div class='event' key="+ p['id'] +">" +
-	            "<a class ='ename'>user:"+ p['user'] +"\t</a>"+
-				"<a class ='edate'>pwd:"+ p['pwd'] +"\t</a>"+
-				"<\div>\n";
-      
-   }
-   //let d = JSON.parse(data).events
-   event_div.innerHTML = intext;
-   renderTimers();
-}
-
-
-
-
-async function login(){
-   await reqJSON('POST','/login',{
-      user:document.getElementById('userInput').value,
-	  pwd:document.getElementById('pwdInput').value,
-   });
-   window.location.replace('index.html');
-   //await getlo();
-}
-
-async function register(){
-   await reqJSON('POST','/register',{
-      user:document.getElementById('userInput').value,
-	  pwd:document.getElementById('pwdInput').value,
-   });
-   await getlo();
-}
-
-
-document.addEventListener('DOMContentLoaded', () => {
-   document.getElementById('loginbtn').addEventListener('click',login);
-   document.getElementById('registerbtn').addEventListener('click',register);
-   getlo();
-
-});
-
-
-
-</script>
-</html>
+{% block content %}
+    <h1>LOGIN PAGE</h1>
+    <div class="container" id="formDiv">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <div>
+        {{ messages[0] }}
+      </div>
+    {% endif %}
+    {% endwith %}
+    <form class="form" id="login" method="POST" action="/login">
+      <p>Username: <input type="text" name="user_id"></p>
+      <p>Password: <input type="password" name="pwd"></p>
+      <p><button>Login</button></p>
+      <p><a id='google' href='{{base_uri}}?client_id={{client_id}}&response_type=code&scope=openid%20email%20profile&redirect_uri={{redirect_uri}}&state={{state}}&nonce={{nonce}}'></a></p>
+      <p>New User? <a href="{{url_for('auth.signup')}}" target="_self">Sign up</a></p>
+    </form>
+    </div>
+{% endblock %}
